gc demo